--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur de coût de recette</title>
-    <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
@@ -47,9 +46,30 @@
             <form id="recipeForm">
                 <div id="recipeInputs"></div>
                 <button type="button" id="addIngredientButton">Ajouter un ingrédient</button>
-                <button type="submit">Calculer le coût de la recette</button>
+                <button type="button" id="settingsButton">Paramètres</button>
             </form>
-            <h3>Coût total de la recette : <span id="totalCost">0</span> €</h3>
+
+            <div id="infoDisplay">
+                <h3>Coût total de la recette : <span id="totalCost">0</span> €</h3>
+                <h3>Prix de vente (avec marge) : <span id="salePrice">0</span> €</h3>
+            </div>
+        </div>
+
+        <div id="settingsModal" class="modal">
+            <div class="modal-content">
+                <span class="close-btn" id="closeModalBtn">&times;</span>
+                <h2>Paramètres</h2>
+                <label for="electricityCost">Coût de l'électricité (par heure, €) :</label>
+                <input type="number" id="electricityCostModal" value="0.12" step="0.01" placeholder="Coût de l'électricité" required>
+
+                <label for="hoursSpent">Nombre d'heures passées :</label>
+                <input type="number" id="hoursSpentModal" value="1" step="0.1" placeholder="Heures passées" required>
+
+                <label for="profitMargin">Marge souhaitée (%) :</label>
+                <input type="number" id="profitMarginModal" value="30" step="1" placeholder="Marge (%)" required>
+
+                <button id="saveSettingsBtn">Enregistrer</button>
+            </div>
         </div>
     </div>
 
@@ -60,8 +80,50 @@
     const recipeForm = document.getElementById('recipeForm');
     const recipeInputs = document.getElementById('recipeInputs');
     const totalCost = document.getElementById('totalCost');
+    const salePrice = document.getElementById('salePrice');
     const addIngredientButton = document.getElementById('addIngredientButton');
+    const settingsButton = document.getElementById('settingsButton');
+    const settingsModal = document.getElementById('settingsModal');
+    const closeModalBtn = document.getElementById('closeModalBtn');
+    const saveSettingsBtn = document.getElementById('saveSettingsBtn');
+
+    const electricityCostInputModal = document.getElementById('electricityCostModal');
+    const hoursSpentInputModal = document.getElementById('hoursSpentModal');
+    const profitMarginInputModal = document.getElementById('profitMarginModal');
     let ingredientsData = [];
+
+    let electricityCost = 0.12;
+    let hoursSpent = 1;
+    let profitMargin = 30;
+
+    settingsButton.addEventListener('click', () => {
+        electricityCostInputModal.value = electricityCost;
+        hoursSpentInputModal.value = hoursSpent;
+        profitMarginInputModal.value = profitMargin;
+
+        settingsModal.style.display = 'flex';
+        setTimeout(() => {
+            settingsModal.style.opacity = '1';
+        }, 10);
+    });
+
+
+    closeModalBtn.addEventListener('click', () => {
+        settingsModal.style.opacity = '0';
+        setTimeout(() => {
+            settingsModal.style.display = 'none';
+        }, 500);
+    });
+
+    saveSettingsBtn.addEventListener('click', () => {
+        electricityCost = parseFloat(electricityCostInputModal.value);
+        hoursSpent = parseFloat(hoursSpentInputModal.value);
+        profitMargin = parseFloat(profitMarginInputModal.value);
+
+        settingsModal.style.display = 'none';
+        updateCostDisplay();
+    });
+
 
     document.addEventListener('DOMContentLoaded', async () => {
         openTab('add');
@@ -69,18 +131,12 @@
         await updateIngredientList();
     });
 
-    async function populateSuppliers() {
-        const response = await fetch('/ingredients/suppliers');
-        const suppliers = await response.json();
-        const supplierDropdown = document.getElementById('supplierDropdown');
-
-        suppliers.forEach(supplier => {
-            const option = document.createElement('option');
-            option.value = supplier;
-            option.textContent = supplier;
-            supplierDropdown.appendChild(option);
-        });
-    }
+    deleteIngredientButton.addEventListener('click', () => {
+        const selectedOption = ingredientDropdown.value;
+        if (selectedOption) {
+            deleteIngredient(selectedOption);
+        }
+    });
 
     ingredientForm.addEventListener('submit', async (event) => {
         event.preventDefault();
@@ -107,6 +163,7 @@
 
     recipeForm.addEventListener('submit', async (event) => {
         event.preventDefault();
+
         const recipe = [];
         document.querySelectorAll('.recipe-item').forEach(item => {
             const name = item.querySelector('.recipe-select').value;
@@ -123,8 +180,57 @@
         });
 
         const result = await response.json();
-        totalCost.textContent = result.totalCost.toFixed(2);
+        const totalIngredientCost = result.totalCost;
+
+        const electricityCostTotal = electricityCost * hoursSpent;
+
+        const totalCostValue = totalIngredientCost + electricityCostTotal;
+
+        const salePriceValue = totalCostValue * (1 + profitMargin / 100);
+
+        totalCost.textContent = totalCostValue.toFixed(2);
+        salePrice.textContent = salePriceValue.toFixed(2);
     });
+
+    async function populateSuppliers() {
+        const response = await fetch('/ingredients/suppliers');
+        const suppliers = await response.json();
+        const supplierDropdown = document.getElementById('supplierDropdown');
+
+        suppliers.forEach(supplier => {
+            const option = document.createElement('option');
+            option.value = supplier;
+            option.textContent = supplier;
+            supplierDropdown.appendChild(option);
+        });
+    }
+
+    function updateCostDisplay() {
+        let totalIngredientCost = 0;
+
+        document.querySelectorAll('.recipe-item').forEach(item => {
+            const select = item.querySelector('.recipe-select');
+            const quantityInput = item.querySelector('.recipe-quantity');
+
+            const selectedIngredient = ingredientsData.find(ingredient => ingredient.name === select.value);
+            const quantity = parseFloat(quantityInput.value);
+
+            if (selectedIngredient && !isNaN(quantity)) {
+                totalIngredientCost += selectedIngredient.pricePerKg * quantity;
+            }
+        });
+
+        const electricityCostTotal = electricityCost * hoursSpent;
+
+        const totalCostValue = totalIngredientCost + electricityCostTotal;
+
+        const salePriceValue = totalCostValue * (1 + profitMargin / 100);
+
+        totalCost.textContent = totalCostValue.toFixed(2);
+        salePrice.textContent = salePriceValue.toFixed(2);
+    }
+
+
 
     function openTab(tabId) {
         document.querySelectorAll('.tab-content').forEach(tab => {
@@ -144,6 +250,7 @@
 
     document.addEventListener('DOMContentLoaded', () => {
         openTab('calculate');
+        updateCostDisplay();
     });
 
     function addIngredientInput() {
@@ -171,12 +278,18 @@
         quantityInput.required = true;
         quantityInput.style.flex = '2';
 
+        quantityInput.addEventListener('input', updateCostDisplay);
+        select.addEventListener('change', updateCostDisplay);
+
         const removeButton = document.createElement('button');
         removeButton.type = 'button';
         removeButton.classList.add('remove-button');
-        removeButton.innerHTML = '<i class="fas fa-trash-alt"></i>';  // Icône de poubelle
+        removeButton.innerHTML = '<i class="fas fa-trash-alt"></i>';
         removeButton.style.marginLeft = '10px';
-        removeButton.onclick = () => div.remove();
+        removeButton.onclick = () => {
+            div.remove();
+            updateCostDisplay();  // Recalculer après suppression
+        };
 
         const descriptionLabel = document.createElement('small');
         descriptionLabel.classList.add('ingredient-description');
@@ -196,14 +309,12 @@
         div.appendChild(select);
         div.appendChild(descriptionLabel);
         quantityWrapper.appendChild(quantityInput);
-        quantityWrapper.appendChild(removeButton);  // Ajout du bouton de suppression avec l'icône
-        div.appendChild(quantityWrapper); // Ajout du wrapper à la div
+        quantityWrapper.appendChild(removeButton);
+        div.appendChild(quantityWrapper);
         recipeInputs.appendChild(div);
+
+        updateCostDisplay();
     }
-
-
-
-
 
     async function deleteIngredient(name) {
         const response = await fetch(`/ingredients/${name}`, {
@@ -239,14 +350,6 @@
 
         addIngredientInput();
     }
-
-    deleteIngredientButton.addEventListener('click', () => {
-        const selectedOption = ingredientDropdown.value;
-        if (selectedOption) {
-            deleteIngredient(selectedOption);
-        }
-    });
-
     updateIngredientList();
 </script>
 </body>
